@@ -29,7 +29,7 @@ function zbx_is_callable($var) {
 	return true;
 }
 
-class CsetupWizard extends CForm {
+class CSetupWizard extends CForm {
 
 	function __construct(&$ZBX_CONFIG) {
 		$this->DISABLE_NEXT_BUTTON = false;
@@ -62,7 +62,7 @@ class CsetupWizard extends CForm {
 			)
 		);
 
-		$this->EventHandler();
+		$this->eventHandler();
 
 		parent::__construct('post');
 	}
@@ -79,19 +79,23 @@ class CsetupWizard extends CForm {
 		return $this->getConfig('step', 0);
 	}
 
-	function DoNext() {
+	function doNext() {
 		if (isset($this->stage[$this->getStep() + 1])) {
 			$this->ZBX_CONFIG['step']++;
+
 			return true;
 		}
+
 		return false;
 	}
 
-	function DoBack() {
+	function doBack() {
 		if (isset($this->stage[$this->getStep() - 1])) {
 			$this->ZBX_CONFIG['step']--;
+
 			return true;
 		}
+
 		return false;
 	}
 
@@ -123,7 +127,7 @@ class CsetupWizard extends CForm {
 		}
 
 		if (isset($this->stage[$this->getStep() + 1])) {
-			$next = new CSubmit('next['.$this->getStep().']', _('Next').' >>');
+			$next = new CSubmit('next['.$this->getStep().']', _('Next').SPACE.'&raquo;');
 		}
 		else {
 			$next = new CSubmit('finish', _('Finish'));
@@ -140,15 +144,18 @@ class CsetupWizard extends CForm {
 			$next->setEnabled(false);
 		}
 
-		$footer = new CDiv(array(
-			$cancel,
-			new CDiv(array(
-				$this->getStep() != 0 ? new CSubmit('back['.$this->getStep().']', '<< '._('Previous')) : null,
-				$next), 'footer_right')
-			), 'footer');
+		// if the user is not logged in (first setup run) hide the "previous" button on the final step
+		if ($this->getStep()
+				&& ((CWebUser::$data && CWebUser::getType() == USER_TYPE_SUPER_ADMIN) || $this->getStep() < 5)) {
+			$back = new CSubmit('back['.$this->getStep().']', '&laquo;'.SPACE._('Previous'));
+		}
+		else {
+			$back = null;
+		}
+
+		$footer = new CDiv(array($cancel, new CDiv(array($back, $next), 'footer_right')), 'footer');
 
 		$container->addItem($footer);
-
 
 		return parent::bodyToString($destroy).$container->ToString();
 	}
@@ -476,7 +483,7 @@ class CsetupWizard extends CForm {
 		);
 	}
 
-	function CheckConnection() {
+	function checkConnection() {
 		global $DB;
 
 		if (!$this->getConfig('check_fields_result')) {
@@ -520,14 +527,14 @@ class CsetupWizard extends CForm {
 		return $result;
 	}
 
-	function EventHandler() {
+	function eventHandler() {
 		if (isset($_REQUEST['back'][$this->getStep()])) {
-			$this->DoBack();
+			$this->doBack();
 		}
 
 		if ($this->getStep() == 1) {
 			if (isset($_REQUEST['next'][$this->getStep()])) {
-				$this->DoNext();
+				$this->doNext();
 			}
 			$this->DISABLE_NEXT_BUTTON = true;
 		}
@@ -541,7 +548,7 @@ class CsetupWizard extends CForm {
 			$this->setConfig('DB_SCHEMA', get_request('schema', $this->getConfig('DB_SCHEMA', '')));
 
 			if (isset($_REQUEST['retry'])) {
-				if (!$this->CheckConnection()) {
+				if (!$this->checkConnection()) {
 					$this->DISABLE_NEXT_BUTTON = true;
 					unset($_REQUEST['next']);
 				}
@@ -552,7 +559,7 @@ class CsetupWizard extends CForm {
 			}
 
 			if (isset($_REQUEST['next'][$this->getStep()])) {
-				$this->DoNext();
+				$this->doNext();
 			}
 		}
 		elseif ($this->getStep() == 3) {
@@ -560,11 +567,11 @@ class CsetupWizard extends CForm {
 			$this->setConfig('ZBX_SERVER_PORT', get_request('zbx_server_port', $this->getConfig('ZBX_SERVER_PORT', '10051')));
 			$this->setConfig('ZBX_SERVER_NAME', get_request('zbx_server_name', $this->getConfig('ZBX_SERVER_NAME', '')));
 			if (isset($_REQUEST['next'][$this->getStep()])) {
-				$this->DoNext();
+				$this->doNext();
 			}
 		}
 		elseif ($this->getStep() == 4 && isset($_REQUEST['next'][$this->getStep()])) {
-			$this->DoNext();
+			$this->doNext();
 		}
 		elseif ($this->getStep() == 5) {
 			if (isset($_REQUEST['save_config'])) {
@@ -591,7 +598,7 @@ class CsetupWizard extends CForm {
 		}
 
 		if (isset($_REQUEST['next'][$this->getStep()])) {
-			$this->DoNext();
+			$this->doNext();
 		}
 	}
 }
