@@ -5,6 +5,7 @@ New features:
 ..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)
 
 Bug fixes:
+..F....... [ZBX-5942] fixed setup navigation (Eduard, Pavels)
 ..F....... [ZBX-7137] fixed macros resolving in inventory host interfaces (Eduard)
 ...G...PS. [ZBX-7206] fixed arithmetic expressions in C macros not being wrapped in parentheses (asaveljevs)
 ........S. [ZBX-7185] fixed escalations being cancelled by unrelated events (asaveljevs)
